<resources>
    <string name="app_name"> 车++</string>

    <string name="action_settings">Settings</string>

    <string name="tip">提示</string>
    <string name="sure">确定</string>
    <string name="load_progress">咻~咻~咻~duang!</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="loading">正在加载...</string>
    <string name="load_error_click_again">加载失败，点击重新加载！</string>
    <string name="load_complete">已加载完！</string>

    <!-- navgation menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_main">主页</string>
    <string name="nav_my">我的</string>
    <string name="nav_music">音乐</string>
    <string name="nav_car">车辆信息</string>
    <string name="nav_orders">历史订单</string>
    <string name="nav_car_illegally">违章信息</string>
    <string name="others">其它</string>
    <string name="nav_settings">设置</string>
    <string name="nav_exit">退出</string>

    <!-- MainActivity -->
    <string name="double_click_quit">再按一次退出车++( ▼-▼ )</string>
    <string name="action_list">详情列表</string>
    <string name="add_oil">加油</string>
    <string name="add_oil_place">加油站</string>
    <string name="car_4s">4S店</string>
    <string name="car_wash">洗车</string>
    <string name="car_wash_place">洗车场</string>
    <string name="car_park">停车场</string>

    <!-- LoginActivity -->
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="quick_register">快速注册</string>
    <string name="please_select">请选择</string>
    <string name="camera">拍照</string>
    <string name="gallery">图库</string>
    <string name="cancel">取消</string>
    <string name="username_password_mismatch">账户和密码不匹配</string>
    <string name="could_not_find_user">账户不存在</string>
    <string name="error_login_limited">登录失败次数超过限制，请稍候再试，或者通过忘记密码重设密码!</string>
    <string name="login_success">登录成功!</string>

    <!-- RegisterActivity -->
    <string name="register">注册</string>
    <string name="mobile_phone">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="mi">密</string>
    <string name="kong">空</string>
    <string name="ma">码</string>
    <string name="deny">拒绝</string>
    <string name="allow">允许</string>
    <string name="request_camera_write_permission">车++请求访问相机和读写权限！</string>
    <string name="request_write_permission">车++请求读写权限！</string>
    <string name="must_allow_permission_start_camera">必须同意权限才能启动相机拍照！</string>
    <string name="must_allow_permission_read_gallery">必须同意权限才能读取设备照片！</string>
    <string name="error_mobile_phone">请输入正确的手机号!</string>
    <string name="error_register_password_null">密码不能为空!</string>
    <string name="error_register_password">密码必须由数字和字母组成（同时含有数字和字母且区分大小写），长度要在6-16位之间!</string>
    <string name="error_register_verify_address_null">验证码不能为空!</string>
    <string name="verify_code_limited_6_number">验证码为6位纯数字!</string>
    <string name="error_register_take_gender_null">请选择头像!</string>
    <string name="please_receive_verify_code">请注意验证码接收!</string>
    <string name="time_out">连接超时，请稍后!</string>
    <string name="double_get_verify_code">发送短信过快，请稍后重试!</string>
    <string name="verify_code_limited_5">发送验证类短信已经超过一天五条的限制!</string>
    <string name="please_get_verify_code_again">无效的短信验证码!</string>
    <string name="register_success">注册成功!</string>
    <string name="account_exist_please_verify">账户已存在，请验证手机号!</string>
    <string name="register_success_verify_code">注册成功!请验证手机号!</string>

    <!-- ForgetPswActivity -->
    <string name="forget_psw">忘记密码</string>
    <string name="reset_password_success">重置密码成功!</string>

    <!-- ForgetPswActivity -->
    <string name="enter_phone">请输入手机号</string>
    <string name="enter_verification_code">请输入验证码</string>
    <string name="new_password">新密码</string>
    <string name="enter_new_password">请输入新密码</string>

    <!-- UserInfoActivity -->
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="birth">出生</string>
    <string name="birth_years">出生年月</string>
    <string name="hometown">所在地区</string>
    <string name="email">邮箱</string>
    <string name="binding_email">绑定邮箱</string>
    <string name="my_cars">爱车</string>
    <string name="my_cars_setting">请设置爱车信息</string>
    <string name="quit_account">退出登录</string>
    <string name="user_describe_details">加油！加油！加油！重要的事情说三遍！！！</string>
    <string name="logout_ensure">确定要退出当前账号？</string>

    <!-- AlterUserInfoActivity -->
    <string name="user_avatar">头像</string>
    <string name="alter_user_info">更改信息</string>
    <string name="user_describe">自我描述</string>
    <string name="user_describe_one_word">一句话描述自己</string>
    <string name="done">完成</string>
    <string name="man">男</string>
    <string name="lady">女</string>

    <!-- CarsListActivity -->
    <string name="total_cars">共有车辆：</string>
    <string name="car_default">默认</string>
    <string name="set_car_default">设为默认</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>

    <!-- AddCarActivity -->
    <string name="add_car">添加车辆</string>
    <string name="car_number">车牌号</string>
    <string name="car_number_please_select">请输入车牌号</string>
    <string name="car_number_please_enter_correct">请输入正确的车牌号!</string>
    <string name="car_oil_number">油号</string>
    <string name="car_oil_number_please_select">请选择油号</string>
    <string name="car_brand">品牌</string>
    <string name="car_brand_please_select">请选择品牌</string>
    <string name="car_type">车型</string>
    <string name="car_type_please_select">请选择车型</string>
    <string name="car_color">颜色</string>
    <string name="car_color_please_select">请选择颜色</string>

    <!-- CarBrandActivity -->
    <string name="cars_brand">汽车品牌</string>

    <!-- MusicFragment -->
    <string name="more_vertical">更多</string>

</resources>
