<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nav_main"
            android:checked="true"
            android:icon="@drawable/ic_menu_main"
            android:title="@string/nav_main"/>
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music_video"
            android:title="@string/nav_music"/>
        <item
            android:id="@+id/nav_car_maintain"
            android:icon="@drawable/ic_car_info"
            android:title="@string/nav_car"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_orders"
            android:title="@string/nav_orders"/>
        <item
            android:id="@+id/nav_car_illegally"
            android:icon="@drawable/ic_menu_car_illegally"
            android:title="@string/nav_car_illegally"/>
    </group>

    <item
        android:title="@string/others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/nav_settings"/>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="关于"/>
                <item
                    android:id="@+id/nav_exit_app"
                    android:icon="@drawable/ic_menu_exit_app"
                    android:title="@string/nav_exit"/>
            </group>
        </menu>
    </item>

</menu>
