<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_list"
        android:orderInCategory="0"
        android:title="@string/action_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_car_oil"
        android:orderInCategory="1"
        android:title="@string/add_oil_place"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_car_4s"
        android:orderInCategory="2"
        android:title="@string/car_4s"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_car_wash"
        android:orderInCategory="3"
        android:title="@string/car_wash_place"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_car_park"
        android:orderInCategory="4"
        android:title="@string/car_park"
        app:showAsAction="never"/>
</menu>
