<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windowBackground"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/layout_car_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            android:elevation="@dimen/elevation_activity_item"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/car_number"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edit_car_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="right"
                android:hint="@string/car_number_please_select"
                android:singleLine="true"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textHintColor"
                android:textSize="16sp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_car_number"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            android:divider="@drawable/layout_divider"
            android:elevation="@dimen/elevation_activity_item"
            android:orientation="vertical"
            android:showDividers="middle">

            <RelativeLayout
                android:id="@+id/layout_car_oil_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_sex"
                    android:text="@string/car_oil_number"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/text_car_oil_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:hint="@string/car_oil_number_please_select"
                    android:textColor="@color/textPrimary"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_car_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_birth"
                    android:text="@string/car_brand"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/text_car_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:hint="@string/car_brand_please_select"
                    android:textColor="@color/textPrimary"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_car_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_hometown"
                    android:text="@string/car_type"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/text_car_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:gravity="right"
                    android:hint="@string/car_type_please_select"
                    android:textColor="@color/textPrimary"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_car_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_hometown"
                    android:text="@string/car_color"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/text_car_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:gravity="right"
                    android:hint="@string/car_color_please_select"
                    android:textColor="@color/textPrimary"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="16sp"/>

            </RelativeLayout>

        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinator_snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>