<?xml version="1.0" encoding="utf-8"?>
<com.science.carnetplus.widget.FABToolbar.FABToolbarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fabtoolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:containerId="@+id/fabtoolbar_container"
    app:fabId="@+id/fabtoolbar_fab"
    app:fabToolbarId="@+id/fabtoolbar_toolbar"
    app:fadeInFraction="0.3"
    app:hideDuration="300"
    app:horizontalMargin="@dimen/fab_horizontal_margin"
    app:showDuration="600"
    app:verticalMargin="@dimen/fab_vertical_margin">

    <RelativeLayout
        android:id="@id/fabtoolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@id/fabtoolbar_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_car_info"
            app:borderWidth="0dp"
            app:fabSize="normal"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@id/fabtoolbar_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_add_oil"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_gas_station"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="6dp"
            android:text="@string/add_oil"
            android:textColor="@color/textColor"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/text_car_4s"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_car_4s"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="6dp"
            android:text="@string/car_4s"
            android:textColor="@color/textColor"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/text_car_wash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_local_car_wash"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="6dp"
            android:scaleType="centerInside"
            android:text="@string/car_wash"
            android:textColor="@color/textColor"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/text_car_park"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_local_parking"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="6dp"
            android:scaleType="centerInside"
            android:text="@string/car_park"
            android:textColor="@color/textColor"
            android:textSize="12sp"/>

    </LinearLayout>

</com.science.carnetplus.widget.FABToolbar.FABToolbarLayout>