<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/radius_white_bg"
            android:divider="@drawable/layout_divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/mobile_phone"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/edit_mobile_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/enter_phone"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="16sp"
                    android:theme="@style/Theme.AppCompat.Light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/verify_code"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/edit_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/enter_verification_code"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="16sp"
                    android:theme="@style/Theme.AppCompat.Light"/>

                <Button
                    android:id="@+id/btn_get_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/btn_shape_white_red"
                    android:text="@string/verify_code"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_layout"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_shape_red"
            android:text="@string/sure"
            android:textColor="@color/textColor"
            android:textSize="16sp"/>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinator_snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>