<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/design_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:divider="@drawable/layout_divider"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:showDividers="beginning">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="56dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/please_select"
                android:textSize="16sp"/>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="@color/ripple_white"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <TextView
                    android:id="@+id/text_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_photo_camera_grey"
                    android:drawablePadding="32dp"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/camera"
                    android:textSize="16sp"/>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="@color/ripple_white"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <TextView
                    android:id="@+id/text_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_photo_grey"
                    android:drawablePadding="32dp"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/gallery"
                    android:textSize="16sp"/>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="@color/ripple_white"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <TextView
                    android:id="@+id/text_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_cancel_grey"
                    android:drawablePadding="32dp"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/cancel"
                    android:textSize="16sp"/>
            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.NestedScrollView>